--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,15 +1,5 @@
 {
 	"appId": "com.cryptonia.app",
 	"appName": "Cryptonia",
-	"webDir": "www",
-	"bundledWebRuntime": false,
-	"plugins": {
-		"FirebaseAuthentication": {
-			"skipNativeAuth": false,
-			"providers": [
-				"google.com",
-				"twitter.com"
-			]
-		}
-	}
+	"webDir": "www"
 }
