--- a/needs/AndroidManifest.xml
+++ b/needs/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.cryptonia.app">
+    package="com.cryptonia.org">
     <application
         android:allowBackup="true"
         android:hardwareAccelerated="true"
@@ -17,7 +17,7 @@
          android:value="@string/admob_app_id"/>
         <activity
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|smallestScreenSize|screenLayout|uiMode"
-            android:name="com.cryptonia.app.MainActivity"
+            android:name="com.cryptonia.org.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBarLaunch"
             android:launchMode="singleTask"
