--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "@angular/platform-browser": "^14.3.0",
     "@angular/platform-browser-dynamic": "^14.3.0",
     "@angular/router": "^14.3.0",
-    "@capacitor-community/admob": "^3.3.0",
-    "@capacitor/android": "3.4.3",
-    "@capacitor/app": "1.1.1",
-    "@capacitor/core": "3.4.3",
-    "@capacitor/haptics": "1.1.4",
-    "@capacitor/keyboard": "1.2.2",
-    "@capacitor/status-bar": "1.0.8",
-    "@capacitor/storage": "^1.2.5",
+    "@capacitor-community/admob": "^6.0.0",
+    "@capacitor/android": "^6.0.0",
+    "@capacitor/app": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
+    "@capacitor/haptics": "^6.0.0",
+    "@capacitor/keyboard": "^6.0.0",
+    "@capacitor/preferences": "^6.0.0",
+    "@capacitor/status-bar": "^6.0.0",
     "@ionic/angular": "^6.0.0",
     "apexcharts": "^3.35.0",
     "axios": "^0.26.1",
@@ -47,7 +47,7 @@
     "@angular/compiler": "^14.3.0",
     "@angular/compiler-cli": "^14.3.0",
     "@angular/language-service": "^14.3.0",
-    "@capacitor/cli": "3.4.3",
+    "@capacitor/cli": "^6.0.0",
     "@ionic/angular-toolkit": "^6.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
